--- a/Home/CSS/style.css
+++ b/Home/CSS/style.css
@@ -1,12 +1,16 @@
-* {
-  box-sizing: border-box;
-}
+ * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
 
-body {
-  background-color: #141414;
-  font-family: Arial, sans-serif;
-  margin: 0;
-}
+    body {
+      font-family: "Manrope", sans-serif;
+      background-color: #141414;
+      display: flex;
+       flex-direction: column;
+      justify-content: center;
+    }
 /*================ --Navbar-- =====================*/
 .navbar {
   display: flex;
