--- a/Home/CSS/style.css
+++ b/Home/CSS/style.css
@@ -65,26 +65,14 @@
   color: red;
 }
 /*================ --Hero section-- =====================*/
-
 .hero {
-  height: 100vh;
   background: url("images/hero-bg.jpg") no-repeat center center/cover;
   position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
   text-align: center;
-  padding-top: 100px;
-}
-
-.hero-title {
-  position: absolute;
-  bottom: 60px;
-  left: 50%;
-  transform: translateX(-50%);
-  font-size: 2.5rem;
-  color: white;
-  text-align: center;
+  padding: 100px 20px;
 }
 
 .overlay {
@@ -99,8 +87,10 @@
   margin-bottom: 20px;
 }
 
-.hero h1 {
+.hero-title {
   font-size: 2.5rem;
+  color: white;
+  text-align: center;
   margin-bottom: 20px;
 }
 
