--- a/Home/CSS/style.css
+++ b/Home/CSS/style.css
@@ -114,7 +114,100 @@
 .watch-btn:hover {
   background-color: #e60000;
 }
+/*============--cards section--==========================*/
 
+.stream{
+    width: 90%;
+    width:1597px ;
+    height: 801px;
+    margin: 0 auto;
+    background-color:#141414;
+    background-color: 1A1A1A;
+
+    .streamContent{
+        width: 1597px;
+        height: 125px;
+        padding:20px;
+        margin: 30px 0;
+        color: white;
+        h1{
+            font-weight: 700;
+            font-size: 38px;
+            font-weight: bold;
+            margin-left: 9px;
+        }
+        p{
+            font-size: 18px;
+            font-weight: 400;
+            color: #999999;
+            margin-top: 10px;
+            width: 1279px;
+            height: 54px;
+        }
+    }
+
+
+
+    .cards{
+        width: 1597px;
+        height: 610px;
+        padding:6px;
+         margin-top: 60px;
+            display: grid;
+    grid-template-columns:repeat(3, 1fr);
+}
+.card1, .card2, .card3, .card4 , .card5  , .card6{
+    width:512px;
+    height: 283px;
+    padding: 30px;
+    margin: 10px;
+    background-color: #0F0F0F;
+    gap: 50px;
+    margin-right: 3px;
+    border-radius: 10px;
+    box-shadow:0px  0px 10px 0px rgb(92, 1, 1) inset ;
+    transition: all 0.3s ease-in-out;
+    
+    
+}
+
+
+p{
+    padding: 20px;
+    margin: 10px;
+    color: #999999;
+}
+
+
+h2{
+    padding: 20px;
+    margin: 10px;
+    color: white;
+    font-weight:600 ;
+    margin-left: 10px;
+    font-size: 24px;
+    font-weight: bold;
+    
+}
+a{
+    width: 72px;
+    height:72px ;
+    border-radius: 12px;
+    color: red;
+    padding: 16px;
+    background-color: #262626;
+    margin-right: 10px;
+    text-decoration: none;
+
+}
+
+}
+.card1:hover, .card2:hover, .card3:hover, .card4:hover , .card5:hover  , .card6:hover{
+    transform: scale(1.02);
+
+    transition: all 0.3s ease-in-out;
+}
+/*===================--end cards section--==============*/
 /*================ --FAQ section start-- =====================*/
 .FAQ-Contener {
       width: 80%;
