--- a/Home/CSS/style.css
+++ b/Home/CSS/style.css
@@ -525,6 +525,127 @@ a{
     font-size: 13px;
   }
 }
+/*================Choose your Plan ===============*/
+
+
+.plan-header-text h1 {
+  font-size: 33px;
+  font-weight: 600;
+  line-height: 150%;
+  color: #FFFFFF;
+}
+
+.plan-header {
+  display: flex;
+  gap: 150px;
+  flex-wrap: nowrap;
+}
+
+.plan-header-text p {
+  color: #999999;
+  font-weight: 400;
+  line-height: 150%;
+  margin-bottom: 20px;
+}
+
+.plan-header-button{
+    top: 50px;
+    position: relative;
+    border-radius: 5px gray;
+}
+.plan-header-button button {
+  background-color: rgba(15, 15, 15, 1);
+  color: #fff;
+  border: none;
+  padding:20px;
+  margin-left: 2px;
+  cursor: pointer;
+  border-radius: 10px;
+}
+.plan-header-button button:hover {
+  background-color: rgba(31, 31, 31, 1);
+}
+
+.toggle-buttons button.active {
+  background-color: #333;
+}
+
+.plans {
+  margin-top: 40px;
+  display: flex;
+  gap: 20px;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.plan {
+  background-color: #1A1A1A;
+  padding: 20px 30px;
+  border-radius: 12px;
+  width: 30%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
+}
+
+.plan h3 {
+  font-size: 24px;
+  line-height: 150%;
+  font-weight: 500;
+  /* margin-top: 0; */
+  color: white;
+}
+
+.plan p {
+  color: #999999;
+  font-weight: 400;
+  line-height: 150%;
+  margin-bottom: 40px;
+  margin-top: 20px;
+}
+
+.price {
+  font-size: 30px;
+  font-weight: 400;
+  line-height: 73%;
+  margin-bottom: 40px;
+}
+.price .month {
+    color: #999999;
+  font-weight: 500;
+  line-height: 73%;
+  font-size: 18px;
+
+}
+
+.buttons {
+  display: flex;
+  gap: 10px;
+}
+
+.buttons button {
+  flex: 1;
+  border-radius: 8px;
+  border: none;
+  cursor: pointer;
+  /* font-weight: bold; */
+  width: 200px;
+  height: 60px;
+}
+
+.free-trial , .choose-plan {
+  background-color: #141414;
+  color: rgba(255, 255, 255, 0.9);
+  font-size: 18px;
+  margin-bottom: 20px;
+  line-height: 150%;
+}
+
+.choose-plan {
+  background-color: #E50000;
+}
+
 
 /*================ --Footer-- =====================*/
 .trial-box {
