--- a/Home/CSS/style.css
+++ b/Home/CSS/style.css
@@ -1,25 +1,23 @@
 * {
   box-sizing: border-box;
   margin: 0;
-  padding: 1;
+  padding: 0;
 }
 
-    body {
-      font-family: "Manrope", sans-serif;
-      background-color: #141414;
-       
-    }
-     .mainContainer{
-        width: 100%;
-        height: 100%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        padding-top: 80px;
-        gap: 100px;
-      
-    }
+body {
+  font-family: "Manrope", sans-serif;
+  background-color: #141414;
+}
+.mainContainer {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding-top: 80px;
+  gap: 100px;
+}
 /* === Navbar === */
 .navbar {
   display: flex;
@@ -76,19 +74,15 @@
   color: red;
 }
 
-
 /*================ --Hero section-- =====================*/
 .hero {
-
   display: flex;
   justify-content: center;
   align-items: center;
   text-align: center;
- 
 }
 
 .overlay {
-  background-color: rgba(0, 0, 0, 0.7);
   padding: 50px;
   border-radius: 10px;
 }
@@ -100,7 +94,6 @@
 }
 .play-icon img {
   width: 100%;
-
 }
 
 .hero-title {
@@ -131,109 +124,108 @@
   background-color: #e60000;
 }
 
-
 /*============--cards section--==========================*/
 
-.stream{
+.stream {
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 50px;
+  padding: 30px;
+  margin: 0 auto;
+  background-color: #141414;
+  background-color: 1A1A1A;
+
+  .streamContent {
     width: 100%;
-    height: auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 50px;
-    padding: 30px;
-    margin: 0 auto;
-    background-color:#141414;
-    background-color: 1A1A1A;
 
-    .streamContent{
-        width:  100%;
-       
-        padding:20px;
-        
+    padding: 20px;
+
     align-items: center;
-        margin: 30px 0;
-        color: white;
-        h1{
-            font-weight: 700;
-            font-size: 38px;
-            font-weight: bold;
-            margin-left: 9px;
-        }
-        p{
-            font-size: 18px;
-            font-weight: 400;
-            color: #999999;
-            margin-top: 10px;
-            width: 100%;
-            height: 54px;
-        }
+    color: white;
+    h1 {
+      font-weight: 700;
+      font-size: 38px;
+      font-weight: bold;
+      margin-left: 9px;
     }
+    p {
+      font-size: 18px;
+      font-weight: 400;
+      color: #999999;
+      margin-top: 10px;
+      width: 100%;
+      height: 54px;
+    }
+  }
 
-
-
-    .cards{
-        width: 100%;
-        height: 610px;
-        padding:6px;
-         margin-top: 60px;
-            display: grid;
-    grid-template-columns:repeat(3, 1fr);
+  .cards {
+    width: 100%;
+    height: 610px;
+    padding: 6px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
     gap: 20px;
-}
-.card1, .card2, .card3, .card4 , .card5  , .card6{
-    width:100%;
+  }
+  .card1,
+  .card2,
+  .card3,
+  .card4,
+  .card5,
+  .card6 {
+    width: 100%;
 
-    background-color: #0F0F0F;
+    background-color: #0f0f0f;
     gap: 50px;
-  
+
     border-radius: 10px;
-    box-shadow:0px  0px 10px 0px rgb(92, 1, 1) inset ;
+    box-shadow: 0px 0px 10px 0px rgb(92, 1, 1) inset;
     transition: all 0.3s ease-in-out;
-    
-    
-}
+  }
 
-
-p{
+  p {
     padding: 20px;
     margin: 10px;
     color: #999999;
-}
+  }
 
-
-h2{
+  h2 {
     padding: 20px;
     margin: 10px;
     color: white;
-    font-weight:600 ;
+    font-weight: 600;
     margin-left: 10px;
     font-size: 24px;
     font-weight: bold;
-    
-}
-a{
+  }
+  a {
     width: 72px;
-    height:72px ;
+    height: 72px;
     border-radius: 12px;
     color: red;
     padding: 16px;
     background-color: #262626;
     margin-right: 10px;
     text-decoration: none;
-
+  }
 }
+.card1:hover,
+.card2:hover,
+.card3:hover,
+.card4:hover,
+.card5:hover,
+.card6:hover {
+  transform: scale(1.02);
 
-}
-.card1:hover, .card2:hover, .card3:hover, .card4:hover , .card5:hover  , .card6:hover{
-    transform: scale(1.02);
-
-    transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
 }
 /*===================--end cards section--==============*/
 /*================ --FAQ section start-- =====================*/
 .FAQ-Contener {
-  width: 80%;
+  margin-left: 15px;
+  margin-right: 15px;
   padding: 20px;
   color: #ffffff;
   display: flex;
@@ -241,14 +233,12 @@ a{
   justify-content: center;
 }
 
-    .head {
-      display: flex;
-      margin: 20px 0;
-      justify-content: space-between;
-      align-items: center;
-      
-      
-    }
+.head {
+  display: flex;
+  margin: 20px 0;
+  justify-content: space-between;
+  align-items: center;
+}
 
 .FAQ-Title h1 {
   font-size: 38px;
@@ -262,34 +252,33 @@ a{
   line-height: 1.5;
 }
 
-    .TBtn .Qbtn {
-      background-color: #E50000;
-      color: #ffffff;
-      border: none;
-      padding: 16px 24px;
-      border-radius: 8px;
-      cursor: pointer;
-      font-size: 16px;
-      font-weight: 600;
-      width: 175px;
-      outline: none;
-    }
-    .TBtn .Qbtn :hover {
-      background-color: #ff0000;
-    }
-    .FAQ-Content {
-      padding: 20px 0;
-      display: grid;
-      grid-template-columns: repeat(2, 1fr);
-      gap: 30px 60px;
-      
-    }
+.TBtn .Qbtn {
+  background-color: #e50000;
+  color: #ffffff;
+  border: none;
+  padding: 16px 24px;
+  border-radius: 8px;
+  cursor: pointer;
+  font-size: 16px;
+  font-weight: 600;
+  width: 175px;
+  outline: none;
+}
+.TBtn .Qbtn :hover {
+  background-color: #ff0000;
+}
+.FAQ-Content {
+  padding: 20px 0;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 30px 60px;
+}
 
 .FAQ-Item {
   border-bottom: 1px solid transparent;
   border-image: linear-gradient(to right, transparent, #e50000, transparent);
   border-image-slice: 1;
-  
+
   padding-bottom: 10px;
 }
 
@@ -347,7 +336,6 @@ a{
 }
 /*================ -- Movies Section --  =======================*/
 
-
 .headerBoxs {
   padding: 20px;
   color: white;
@@ -360,13 +348,8 @@ a{
 
 .headerBoxs h2 {
   font-size: 24px;
-  margin-top: 100px;
-  margin-bottom: 25px;
+  margin-left: 40px;
 }
-.headerBoxs .mg-0 {
-  margin-top: 0;
-}
-
 .buttonsheaderBoxs {
   display: flex;
   justify-content: center;
@@ -403,8 +386,8 @@ a{
 }
 
 .showsContainer {
- width: 100%;
- height: auto;
+  width: 100%;
+  height: auto;
   gap: 20px;
   display: flex;
   align-items: center;
@@ -555,18 +538,17 @@ a{
   }
 }
 
-
 /*================Choose your Plan ===============*/
-
 
 .plan-header-text h1 {
   font-size: 33px;
   font-weight: 600;
   line-height: 150%;
-  color: #FFFFFF;
+  color: #ffffff;
 }
 
 .plan-header {
+  margin-left: 70px;
   display: flex;
   gap: 150px;
   flex-wrap: nowrap;
@@ -579,17 +561,20 @@ a{
   margin-bottom: 20px;
 }
 
-.plan-header-button{
-    top: 50px;
-    position: relative;
-    border-radius: 5px gray;
+.plan-header-button {
+  top: 50px;
+  position: relative;
+  border-radius: 5px gray;
+}
+.plan-section {
+  margin-top: 50px;
 }
 .plan-header-button button {
   background-color: rgba(15, 15, 15, 1);
   color: #fff;
   border: none;
-  padding:20px;
-  margin-left: 2px;
+  padding: 20px;
+  margin-left: 25px;
   cursor: pointer;
   border-radius: 10px;
 }
@@ -610,14 +595,13 @@ a{
 }
 
 .plan {
-  background-color: #1A1A1A;
+  background-color: #1a1a1a;
   padding: 20px 30px;
   border-radius: 12px;
   width: 30%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-
 }
 
 .plan h3 {
@@ -641,13 +625,13 @@ a{
   font-weight: 400;
   line-height: 73%;
   margin-bottom: 40px;
+  color: white;
 }
 .price .month {
-    color: #999999;
+  color: #999999;
   font-weight: 500;
   line-height: 73%;
   font-size: 18px;
-
 }
 
 .buttons {
@@ -665,7 +649,8 @@ a{
   height: 60px;
 }
 
-.free-trial , .choose-plan {
+.free-trial,
+.choose-plan {
   background-color: #141414;
   color: rgba(255, 255, 255, 0.9);
   font-size: 18px;
@@ -674,10 +659,8 @@ a{
 }
 
 .choose-plan {
-  background-color: #E50000;
+  background-color: #e50000;
 }
-
-
 
 /*================ --Footer-- =====================*/
 .trial-box {
@@ -687,9 +670,9 @@ a{
   background-position: center;
   position: relative;
   border-radius: 12px;
-  margin: 40px auto;
-  max-width: 1200px;
-  padding: 40px;
+  margin: 80px auto;
+  max-width: 90%;
+  padding: 50px;
   overflow: hidden;
 }
 
@@ -941,7 +924,7 @@ a{
 
   .hero {
     min-height: 100vh;
-    padding: 150px 60px 100px;
+    /* padding: 150px 60px 100px; */
   }
 
   .overlay {
@@ -968,60 +951,59 @@ a{
 }
 
 @media (max-width: 768px) {
-      .FAQ-Contener {
-        width: 100%;
-        padding: 20px;
-        
-      }
-      .head {
-      display: flex;
-      margin: 20px 0;
-      flex-direction: column;
-      align-items: self-start;
-    }
-
-      .FAQ-Content {
-        grid-template-columns: 1fr;
-        gap: 20px;
-      }
-       .FAQ-Item .a {
-        position: relative;
-        text-wrap: balance;
-        left: 13%;
-        width: 90%;
-      }
-      .FAQ-Title h1 {
-        font-size: 1.5em;
-      }
-
-      .FAQ-Item .q {
-        font-size: 1em;
-      }
-
-      .FAQ-Item .num {
-        padding: 10px 14px;
-        font-size: 16px;
-      }
-       .stream .cards{
-        width: 100%;
-        padding: 10px 0px;
-        height: auto;
-        grid-template-columns: repeat(1, 1fr);
-      }
-      .showsContainer {
-  width: 80%;
-  gap: 20px;
-  display: flex;
-  overflow: hidden;
-  align-items: center;
-  margin-bottom: 50px;
-}
-.showsContainer .boxs {
-  width: 100%;
-  height: auto;
-  padding: 15px;
-}
-  .showsContainer .boximages img {
-  height: 300px;
-    }
+  .FAQ-Contener {
+    width: 100%;
+    padding: 20px;
   }
+  .head {
+    display: flex;
+    margin: 20px 0;
+    flex-direction: column;
+    align-items: self-start;
+  }
+
+  .FAQ-Content {
+    grid-template-columns: 1fr;
+    gap: 20px;
+  }
+  .FAQ-Item .a {
+    position: relative;
+    text-wrap: balance;
+    left: 13%;
+    width: 90%;
+  }
+  .FAQ-Title h1 {
+    font-size: 1.5em;
+  }
+
+  .FAQ-Item .q {
+    font-size: 1em;
+  }
+
+  .FAQ-Item .num {
+    padding: 10px 14px;
+    font-size: 16px;
+  }
+  .stream .cards {
+    width: 100%;
+    padding: 10px 0px;
+    height: auto;
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .showsContainer {
+    width: 80%;
+    gap: 20px;
+    display: flex;
+    overflow: hidden;
+    align-items: center;
+    margin-bottom: 50px;
+  }
+  .showsContainer .boxs {
+    width: 100%;
+    height: auto;
+    padding: 15px;
+  }
+  .showsContainer .boximages img {
+    height: 300px;
+  }
+}
